# PCD-Labs-2024

./: .gitignore  uncrustify.cfg
Lab1/: CMakeLists.txt  app1.c  app2.c  app3.c  build.sh
Lab2/: app1.c  app2.c  app3.c
Lab3/: app1.1.c  app1.2-6.c  app2.2.c  app2.c
Lab4/: app1.c
Lab5/: client1.c  client2.c  server1.c  server2.c
Lab6/: client1.c  client2.c  server1.c  server2.c
